separated models and create inputs for creating blog posts

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,3 +65,23 @@
    display: flex;
    justify-content: center;
 }
+
+.blog-input {
+   width: 500px;
+   margin: 0.5rem;
+   height: 40px;
+   border: 1px solid lightgrey;
+}
+.blog-input2 {
+   width: 80%;
+   height: 40px;
+   border: 1px solid lightgrey;
+   margin: 0.5rem;
+}
+.flex-area {
+   display: flex;
+   gap: 40px;
+}
+.textarea {
+   height: 200px;
+}
